--- a/Gerenciamento-de-Carros/Styles/style.css
+++ b/Gerenciamento-de-Carros/Styles/style.css
@@ -1,2 +1,61 @@
 ﻿body {
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+header {
+    width: 100%;
+    height: 50px;
+    background-color: blue;
+    text-align: center;
+    font-size: 40px;
+    color: white;
+    padding: 5px;
+    margin: 0;
+}
+
+nav {
+    text-align: center;
+    background-color: blue;
+    border-bottom: 3px solid white;
+    border-top: 3px solid white;
+    padding: 5px;
+}
+
+nav a {
+    text-decoration: none;
+    color: white;
+}
+
+main {
+    padding: 10px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    min-height: 800px;
+}
+
+footer {
+    width: 100%;
+    height: 20px;
+    background-color: blue;
+    text-align: center;
+    color: white;
+    padding: 5px;
+    margin: 0;
+}
+
+.tblVisualizar {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.tblVisualizar th {
+    background-color: darkblue; 
+    color: white; 
+}
+
+.tblVisualizar tr:hover {
+    background-color: Highlight;
 }
